# git-sqlite

./: .gitattributes  .gitconfig  .gitignore  LICENSE  Makefile.am  README  README.md  attach-to-repo.sh  attach.sh  configure.ac  git-sqlite-diff.in  git-sqlite-merge.in  git-sqlite.in  run.sh.in  schema.sql  sqlite-diff  sqlite-merge  util.sh
contrib/: db_config.php
extras/: db_config.php
src/: Makefile.am  git-sqlite-diff-parse.in  git-sqlite-diff.in  git-sqlite-merge.in  git-sqlite.in  schema.sql  schema.sql.in  util.sh
