bin_SCRIPTS = \
    git-sqlite \
    git-sqlite-diff \
	git-sqlite-diff-parse \
    git-sqlite-merge

utildir = $(datadir)/git-sqlite

# files to install in /usr/local/share/PACKAGE/
utilities = \
	util.sh \
	schema.sql

dist_util_DATA = $(utilities)
EXTRA_DIST = $(utilities)

CLEANFILES = $(bin_SCRIPTS)
